tests/ui/no_comma_after_eq.stderr
error: Expected comma after eq
 --> tests/ui/no_comma_after_eq.rs:3:38
  |
3 | #[make_dst_factory(create, debug, eq no_std)]
  |                                      ^^^^^^
